--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
   <script>
     const imagens = [
       "imagens/img1.jpg",
-      "imagens/img2.jpg"
+      "imagens/img2.jpg",
+      "imagens/img3.jpg",
+      "imagens/img4.jpg",
     ];
 
     const aleatoria = imagens[Math.floor(Math.random() * imagens.length)];
