--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       "imagens/img2.jpg",
       "imagens/img3.jpg",
       "imagens/img4.jpg",
+      "imagens/img5.png",
     ];
 
     const aleatoria = imagens[Math.floor(Math.random() * imagens.length)];
